# obexftp

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  Doxyfile.coverpage  Doxyfile.developer  License.txt  Makefile.am  NEWS  README  README.bfb  README.cobex  README.k12-5  README.obexftp  README.openobex  THANKS  TODO  acinclude.m4  bootstrap  configure.in  obexftp.pc.in  obexftp.spec.in
CMakeModules/: FindBluetooth.cmake  FindFuse.cmake  FindIconv.cmake  FindOpenObex.cmake  MaintainerMode.cmake
apps/: CMakeLists.txt  Makefile.am  bt_discovery.c  bt_discovery.h  discovery.c  flexmem_cli.c  obexftp.c  obexftp_cli.c  obexftp_sdp.c  obexftp_sdp.h  obexftpd.c  perl_example.pl  python_example.py  ruby_example.rb  ruby_obexftp.rb  stress.c  tcl_example.tcl
bfb/: CMakeLists.txt  Makefile.am  bfb.c  bfb.h  bfb.txt  bfb_io.c  bfb_io.h  crc.c  crc.h  crcmodel.c  crcmodel.h  crctable.c  irda_fcs.c  irda_fcs.h
cobexbfb/: Makefile.am  bfb.c  cobex_bfb.c  cobex_bfb.h  cobex_bfb_private.h  crc.h  obex_t.h
cobexpe/: Makefile.am  cobex_pe.c  cobex_pe.h  cobex_pe_private.h  debug.h  obex_t.h
contrib/: Makefile.am  README_obexftpbackup  obexftpbackup  picture-mover
doc/: CMakeLists.txt  Makefile.am  article.css  doc.xsl  docproc.c  flexmem.1  flexmem.1.txt  flexmem.pod  flexmem.txt  kernel-doc  menu.xml  obexftp.1  obexftp.1.txt  obexftp.pod  obexftp.tmpl  obexftpd.1  obexftpd.1.txt  obexftpd.pod
examples/: Makefile.am  c_example.c  c_example_obex_push.c  perl_example.pl  python_example.py  ruby_example.rb  ruby_list_devices.rb  ruby_obex_push.rb  ruby_obexftp.rb  tcl_example.tcl
fuse/: CMakeLists.txt  Makefile.am  obexautofs.c  obexfs.c
includes/: common.h  g_debug.h
multicobex/: CMakeLists.txt  Makefile.am  multi_cobex.c  multi_cobex.h  multi_cobex_io.c  multi_cobex_io.h  multi_cobex_private.h
obexftp/: CMakeLists.txt  Makefile.am  bt_discovery.c  bt_kit.c  bt_kit.h  bt_kit_test.c  cache.c  cache.h  client.c  client.h  client.i  debug.h  dirtraverse.c  dirtraverse.h  io.c  io.h  obexftp.h  obexftp_io.c  obexftp_io.h  object.c  object.h  unicode.c  unicode.h  uuid.h
src/: Makefile.am  bfb-test.c  bfb.c  bfb.h  cobex_S45.c  cobex_S45.h  cobex_bfb.c  cobex_bfb.h  debug.h  flexmem_cli.c  ircp.c  ircp.h  ircp_client.c  ircp_client.h  ircp_io.c  ircp_server.c  ircp_server.h  stress.c
src/libcobexbfb/: Makefile.am  cobex_bfb.c  debug.h
src/libflexmem/: Makefile.am  client.c  client.h  dirtraverse.c  dirtraverse.h  flexmem.h  io.c  ircp_client.c  ircp_client.h  ircp_io.h  ircp_server.c  ircp_server.h
src/libflexmem/libcobexbfb/: Makefile.am  bfb.h  cobex_bfb.c  crc.c
src/libobexftp/: Makefile.am  client.c  client.h  dirtraverse.c  dirtraverse.h  object.c
swig/: CMakeLists.txt  Makefile.am  charmap.i  client.i
swig/perl/: CMakeLists.txt  Makefile.PL.in  Makefile.am
swig/python/: CMakeLists.txt  Makefile.am  setup.py.in
swig/ruby/: CMakeLists.txt  Makefile.am  extconf.rb
swig/tcl/: CMakeLists.txt  Makefile.am
vmo/: Makefile.am  code.c  gsm2vmo.c  vmo2gsm.c  vmo2wav.c
